--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css.css">
+</head>
+<body>
+  <script src="js.js"></script>
+</body>
 <div id="cards">
     <div class="card">
       <div class="card-content">
@@ -96,3 +105,4 @@
       </div>
     </div>
   </div>
+</html>
