Added icons to index.html

--- a/index.html
+++ b/index.html
@@ -2,20 +2,19 @@
 <html>
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a569752411.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css.css">
 </head>
 <body>
-  <script src="js.js"></script>
-</body>
 <div id="cards">
     <div class="card">
       <div class="card-content">
         <div class="card-image">
-          <i class="fa-duotone fa-gamepad-modern"></i>
+          <i class="fa-solid fa-gamepad"></i>
         </div>
         <div class="card-info-wrapper">
           <div class="card-info">
-            <i class="fa-duotone fa-gamepad-modern"></i>
+            <i class="fa-solid fa-gamepad"></i>
             <div class="card-info-title">
               <h3>Roblox</h3>  
               <h4>A game that has many games. Wait, what?</h4>
@@ -27,11 +26,11 @@
     <div class="card">
       <div class="card-content">
         <div class="card-image">
-          <i class="fa-duotone fa-video"></i>
+          <i class="fa-solid fa-film"></i>
         </div>
         <div class="card-info-wrapper">
           <div class="card-info">
-            <i class="fa-duotone fa-video"></i>
+            <i class="fa-solid fa-film"></i>
             <div class="card-info-title">
               <h3>Youtube</h3>  
               <h4>A tube of yous. Er, I mean videos.</h4>
@@ -43,14 +42,14 @@
     <div class="card">
       <div class="card-content">
         <div class="card-image">
-          <i class="fa-duotone fa-music"></i>
+          <i class="fa-solid fa-music"></i>
         </div>
         <div class="card-info-wrapper">
           <div class="card-info">
-            <i class="fa-duotone fa-music"></i>
+            <i class="fa-solid fa-music"></i>
             <div class="card-info-title">
               <h3>Tiktok</h3>  
-              <h4>These absolutely are on another level of brainrot.</h4>
+              <h4>These are on another level of brain rot.</h4>
             </div>    
           </div>
         </div>
@@ -59,14 +58,14 @@
     <div class="card">
       <div class="card-content">
         <div class="card-image">
-          <i class="fa-duotone fa-signal-bars-slash"></i>
+          <i class="fa-solid fa-headphones"></i>
         </div>
         <div class="card-info-wrapper">
           <div class="card-info">
-            <i class="fa-duotone fa-signal-bars-slash"></i>
+            <i class="fa-solid fa-headphones"></i>
             <div class="card-info-title">
-              <h3>Oh no</h3>  
-              <h4>I dont want to...</h4>
+              <h3>Spotify</h3>  
+              <h4>Wanna break from the ads?</h4>
             </div>    
           </div>
         </div>
@@ -75,14 +74,14 @@
     <div class="card">
       <div class="card-content">
         <div class="card-image">
-          <i class="fa-duotone fa-signal-bars"></i>
+          <i class="fa-solid fa-comments"></i>
         </div>
         <div class="card-info-wrapper">
           <div class="card-info">
-            <i class="fa-duotone fa-signal-bars"></i>
+            <i class="fa-solid fa-comments"></i>
             <div class="card-info-title">
-              <h3>I mean oh yes</h3>  
-              <h4>...go offline.</h4>
+              <h3>Discord</h3>  
+              <h4>Imagine a place...</h4>
             </div>    
           </div>
         </div>
@@ -91,18 +90,20 @@
     <div class="card">
       <div class="card-content">
         <div class="card-image">
-          <i class="fa-duotone fa-skull"></i>
+          <i class="fa-solid fa-skull"></i>
         </div>
         <div class="card-info-wrapper">
           <div class="card-info">
-            <i class="fa-duotone fa-skull"></i>
+            <i class="fa-solid fa-skull"></i>
             <div class="card-info-title">
               <h3>Skulls</h3>  
-              <h4>Look at me, imma overused laughing fella.</h4>
+              <h4>Look at me, I'm an overused laughing fellow.</h4>
             </div>    
           </div>
         </div>
       </div>
     </div>
   </div>
+<script src="js.js"></script>
+</body>
 </html>
